# simple-othello

./: .dockerignore  .markdownlint.yaml  .typos.toml  Cargo.toml  Dev.md  README.md  bacon.toml  clippy.toml  compose.yaml  dev.sh  eslint.config.mjs  package.json
client/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.tailwind  README.md  index.html  package.json
client/src/: lib.rs  main.rs
client/src/components/: hero.rs  lobby.rs  login.rs  mod.rs  room.rs
client/src/contexts/: mod.rs
client/src/pages/: error.rs  lobby.rs  login.rs  main.rs  mod.rs
client/src/router/: mod.rs
client/src/services/: connection.rs
client/src/state/: connection.rs  mod.rs
core/: Cargo.toml
core/src/: lib.rs
extras/uid/: Cargo.toml
extras/uid/src/: lib.rs
logic/: Cargo.toml
logic/src/: lib.rs
net/: Cargo.toml
net/src/: lib.rs  login.rs  request.rs  response.rs  state.rs
net/src/models/: login.rs  mod.rs  room.rs
net/src/packets/: mod.rs
net/src/packets/lobby/: create_room.rs  join_room.rs  mod.rs
net/src/packets/login/: mod.rs
net/src/packets/room/: color.rs  join.rs  leave.rs  mod.rs
rust/: .gitignore  Cargo.toml
rust/client/: Cargo.toml
rust/client/src/: lib.rs
rust/core/: Cargo.toml
rust/core/src/: lib.rs
rust/extras/uid/: Cargo.toml
rust/net/src/models/: login.rs
rust/server/: Cargo.toml
rust/server/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: handle.rs  main.rs
server/src/handle/: lobby.rs  mod.rs  room.rs
server/src/state/: connection.rs  mod.rs  room.rs  user.rs
src/routes/: +layout.svelte
