[workspace]
members = ["core", "extras/uid", "net", "server", "client"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/moriyoshi-kasuga/simple-othello"

[workspace.lints.clippy]
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"

[workspace.dependencies]
uid = { path = "extras/uid" }
core = { path = "core" }
net = { path = "net" }

tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
futures = "0.3"
futures-util = { version = "0.3", features = ["sink"] }
enum-table = "2.0"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
