[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["dev"]
dev = []

[lints]
workspace = true

[dependencies]
core.workspace = true
net.workspace = true

serde.workspace = true
serde_json.workspace = true
log.workspace = true
futures.workspace = true

yew = { version = "0.21", features = ["csr"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
gloo-net = { version = "0.6", features = ["websocket"] }
console_log = "1.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
