[package]
name = "client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
logic.workspace = true
net.workspace = true
uid.workspace = true

serde.workspace = true
serde_json.workspace = true
futures-util.workspace = true
enum-table.workspace = true

dioxus = { version = "0.6.0" }

tracing = "0.1"
gloo-net = "0.6"
gloo-utils = "0.2"
gloo-console = "0.3"
web-sys = { version = "0.3", features = [
  "HtmlInputElement",
  "MessageEvent",
  "WebSocket",
  "CloseEvent",
  "ErrorEvent",
] }

getrandom = { version = "0.3", features = ["wasm_js"] }

[lints]
workspace = true

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

prod = []
