[workspace]
members = ["client", "core", "extras/uid", "net", "server"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/moriyoshi-kasuga/simple-othello"

[workspace.lints.clippy]
unwrap_used = "deny"
print_stdout = "deny"
print_stderr = "deny"
