[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core = { workspace = true }
net = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
env_logger = "0.11"
