[package]
name = "server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { version = "0.8", features = ["json", "ws"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"

[lints]
workspace = true
